image and added new project

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <span class="heading-sec__sub">
             I am a Computer Science student specializing in <b>Data Science</b> with expertise in <b>Python, 
            Java, C++, SQL, R,</b> and web technologies like <b>Flask, HTML, CSS, and JavaScript</b>. I have 
-           developed projects such as an <b>Elderly Care Companion App with Emergency Alerts, Library Management System and
+           developed projects such as an <b>Elderly Care Companion App with Emergency Alerts, Student's Final Mark Prediction Model and
            CPU Scheduling Calculator</b>, demonstrating my <b>problem-solving</b> and <b>software development skills</b>. 
            Certified in <b>Machine Learning, Data Science, and ICDL tools</b>.
             Passionate about technology and innovation, I am eager to collaborate on impactful projects.
@@ -162,7 +162,7 @@
               <p class="about__content-details-para">
                 Hi! It's <b>Nareenthiran Bhuvaneswaran</b>, a <b>Data Science</b> 
                 major with a passion for creating impactful digital solutions.
-                 I’ve developed projects like the Elderly Care Companion App, Library Management System and 
+                 I’ve developed projects like the Elderly Care Companion App, Student's Final Mark Prediction Model and 
                  CPU Scheduling Calculator. Skilled in <b>Python, Java, and C++</b>,
                  I’m eager to collaborate on tech-driven projects. Let’s connect and create something great!
               </p>
@@ -271,11 +271,9 @@ successfully deployed it on Render to ensure accessibility and functionality.
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">
-                Library Management System</h3>
+                Student's Final Mark Prediction Model</h3>
               <p class="projects__row-content-desc">
-                During our second year semester break, me and my friends did a mini OOP concept based project
-which used the C++ Language. This project was a library admin system project, mainly focusing on
-C++ and the OOP concepts. This project is available in my GitHub link.
+                Developed a Linear Regression model to predict students' final exam scores based on attendance, past failures, and first & second exam marks. This project demonstrates data preprocessing, feature selection, and model evaluation techniques to improve academic performance predictions. Implemented in Python with libraries like Pandas, NumPy, and Scikit-Learn. This Project is availabel in my github link
               </p>
               <a
               href="https://github.com/NareenBruce/Basic_OOP"
