updated project link

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ successfully deployed it on Render to ensure accessibility and functionality.
                 Developed a Linear Regression model to predict students' final exam scores based on attendance, past failures, and first & second exam marks. This project demonstrates data preprocessing, feature selection, and model evaluation techniques to improve academic performance predictions. Implemented in Python with libraries like Pandas, NumPy, and Scikit-Learn. This Project is availabel in my github link
               </p>
               <a
-              href="https://github.com/NareenBruce/Basic_OOP"
+              href="hhttps://github.com/NareenBruce/datapy"
               class="btn btn--med btn--theme dynamicBgClr"
               target="_blank"
               >Learn More<img src="./assets/png/github-ico.png"></a
